<resources>
    <string name="app_name">MovieTracker</string>
    <string name="movie_poster_image_view">Movie poster</string>
    <string name="api_key">555dd34b51d2f5b7f9fdb39e04986933</string>
    <string name="search_here">Search here</string>
    <string name="details_rating">%1$s/10</string>
    <string name="details_vote_count">%1$s votes</string>
    <string name="details_budget">%1$s$</string>
    <string name="search_result_rating">%1$s (%2$s votes)</string>
    <string name="no_results">No results</string>
    <string name="no_connection">No connection!</string>
    <string name="offline_movies">Offline Movies</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="back">Back</string>
    <string name="logout">Log out</string>
    <string name="search_hint">Search here for movies, actors or directors</string>
    <string name="per_10"> / 10</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="see_cast_list">See cast list</string>
    <string name="see_pictures">See pictures</string>
    <string name="rate_movie">Rate this movie</string>
    <string name="more_like_this">More like this</string>
    <string name="change_password">Change password</string>
    <string name="my_favourite_movies">My favourite movies and series</string>
    <string name="my_favourite_persons">My favourite actors and directors</string>
    <string name="my_friends">My Friends</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="known_for">Known for</string>
    <string name="popularity">Popularity: %1$s</string>
    <string name="not_logged_in_text">You are not logged in. Please sign in to continue</string>
    <string name="go_back_to_search">Go back to search</string>
    <string name="favourites_title">%1$s\'s favourites</string>
    <string name="favourite_already">Favourite</string>
    <string name="favourites">Favourites</string>
    <string name="movies_and_series">Movies and series</string>
    <string name="actors_and_directors">Actors and directors</string>
    <string name="my_account">My Account</string>
    <string name="give_rating">Give rating</string>
    <string name="how_much_did_you_like_this">How much did you like this?</string>
    <string name="your_rating">Your rating: %1$d</string>
    <string name="delete">Delete</string>
    <string name="friends">Friends</string>
    <string name="get_new_friends">Get New Friends</string>
    <string name="my_friends_title">My Friends:</string>
    <string name="friend_requests_title">Friend requests:</string>
    <string name="friend_requests">Friend requests</string>
    <string name="all_users">All Users:</string>
    <string name="request_sent">Request sent</string>
    <string name="accept">Accept</string>
    <string name="see_friend_s_favourite_movies_and_series">See %1$s\'s favourite movies and series</string>
    <string name="see_friend_s_favourite_actors_and_directors">See %1$s\'s favourite actors and directors</string>
    <string name="delete_friend">Delete friend</string>
    <string name="send_request">Send request</string>
    <string name="cancel_request">Cancel request</string>
    <string name="choose_a_friend">Choose a friend:</string>
    <string name="recommend">Recommend</string>
    <string name="recommendations">Recommendations</string>
    <string name="recommendations_title">Recommendations:</string>
    <string name="channel_name">Movie_Tracker</string>
</resources>
