<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/account"
            android:icon="@drawable/account_icon"
            android:title="@string/my_account" />

    <item
            android:id="@+id/favourites"
            android:title="@string/favourites">
        <menu>

            <item
                    android:id="@+id/movies"
                    android:icon="@drawable/menu_favourite"
                    android:title="@string/movies_and_series" />
            <item
                    android:id="@+id/persons"
                    android:icon="@drawable/star"
                    android:title="@string/actors_and_directors" />
        </menu>
    </item>

    <item
            android:id="@+id/recommendations"
            android:icon="@drawable/recommend"
            android:title="@string/recommendations" />

    <item
            android:id="@+id/friends"
            android:title="@string/friends">
        <menu>
            <item
                    android:id="@+id/my_friends"
                    android:icon="@drawable/friends_icon"
                    android:title="@string/my_friends" />
            <item
                    android:id="@+id/friend_requests"
                    android:icon="@drawable/requests"
                    android:title="@string/friend_requests" />
            <item
                    android:id="@+id/get_new_friends"
                    android:icon="@drawable/get_new_friends_icon"
                    android:title="@string/get_new_friends" />
        </menu>
    </item>

</menu>