<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:clickable="true"
        android:focusable="true"
        app:layoutDescription="@xml/login_register_motion_scene">

    <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/login_email"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/et_login_email"
            app:layout_constraintStart_toStartOf="@id/et_login_email"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/et_login_email"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_rounded"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/round_edittext_padding"
            android:paddingEnd="@dimen/round_edittext_padding"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_email" />

    <TextView
            android:id="@+id/tv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/et_login_password"
            app:layout_constraintTop_toBottomOf="@id/et_login_email" />

    <EditText
            android:id="@+id/et_login_password"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_rounded"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:paddingStart="@dimen/round_edittext_padding"
            android:paddingEnd="@dimen/round_edittext_padding"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_password" />


    <TextView
            android:id="@+id/tv_login_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    <EditText
            android:id="@+id/et_login_username"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:background="@drawable/edittext_rounded"
            android:gravity="center_vertical"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    <Button
            android:id="@+id/btn_login"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    <Button
            android:id="@+id/btn_register"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

</androidx.constraintlayout.motion.widget.MotionLayout>