<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_height"
            android:layout_marginStart="@dimen/dialog_margin"
            android:layout_marginEnd="@dimen/dialog_margin"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="@dimen/dialog_corner_radius"
            app:cardElevation="@dimen/dialog_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/tv_not_logged_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/how_much_did_you_like_this"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/rating_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:rating="0.5"
                    android:layout_margin="20dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_not_logged_in" />

            <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_not_logged_in" />

            <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/ok"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/tv_not_logged_in" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>