<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:clickable="true"
        android:focusable="true">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_margin"
            android:layout_marginEnd="@dimen/dialog_margin"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="@dimen/dialog_corner_radius"
            app:cardElevation="@dimen/dialog_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">

            <androidx.cardview.widget.CardView
                    android:id="@+id/profile_img_container"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/profile_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dummy_profile_picture" />
            </androidx.cardview.widget.CardView>

            <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/fredoka_one"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_img_container" />

            <Button
                    android:id="@+id/btn_show_favourite_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/see_friend_s_favourite_movies_and_series"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_username" />

            <Button
                    android:id="@+id/btn_show_favourite_actors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/see_friend_s_favourite_actors_and_directors"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_show_favourite_movies" />

            <Button
                    android:id="@+id/btn_send_request"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/send_request"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_username" />

            <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/center_line"
                    app:layout_constraintTop_toBottomOf="@id/tv_username" />

            <Button
                    android:id="@+id/btn_delete_request"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/delete_request"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="@id/center_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_username" />

            <Button
                    android:id="@+id/btn_delete_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/delete_request"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/delete_friend"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_show_favourite_actors" />

            <View
                    android:id="@+id/center_line"
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>