<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            tools:context=".ui.details.DetailsActivity">


        <TextView
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Lord of the rings" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/details_title" />


        <TextView
                android:id="@+id/details_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/search_item_text_color"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_title"
                tools:text="2001" />

        <TextView
                android:id="@+id/details_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/search_item_text_color"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/details_release_date"
                app:layout_constraintTop_toBottomOf="@id/details_title"
                tools:text="Adventure" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/details_release_date" />

        <ImageView
                android:id="@+id/details_poster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_genres" />


        <TextView
                android:id="@+id/details_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/details_poster"
                app:layout_constraintTop_toTopOf="@id/details_poster"
                tools:text="8.5" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="2dp"
                android:text="@string/per_10"
                android:textColor="@color/search_item_text_color"
                app:layout_constraintBottom_toBottomOf="@id/details_rating"
                app:layout_constraintStart_toEndOf="@id/details_rating" />

        <TextView
                android:id="@+id/details_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textColor="@color/search_item_text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/details_rating"
                app:layout_constraintTop_toBottomOf="@id/details_rating"
                tools:text="2435543 votes" />

        <TextView
                android:id="@+id/details_own_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/rate_movie"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/details_vote_count"
                app:layout_constraintTop_toBottomOf="@id/details_vote_count" />

        <Button
                android:id="@+id/btn_add_to_favourites"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/add_to_favourites"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/details_poster"
                app:layout_constraintTop_toBottomOf="@id/details_own_rating" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/details_poster" />


        <TextView
                android:id="@+id/details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/details_poster"
                tools:text="Its an awesome movie" />

        <Button
                android:id="@+id/btn_cast_list"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:paddingEnd="10dp"
                android:text="@string/see_cast_list"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/details_description" />

        <Button
                android:id="@+id/btn_pictures"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:paddingEnd="10dp"
                android:text="@string/see_pictures"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/btn_cast_list" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/more_like_this"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_pictures" />

        <include
                android:id="@+id/loading_screen"
                layout="@layout/loading_screen"
                android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_similar_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@id/btn_pictures" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
